--- a/Collab/style.css
+++ b/Collab/style.css
@@ -5,10 +5,8 @@
 }
 
 h1 {
-    font-size: 2.5rem;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
+    color: white;
+    background-color: red;
 }
 
 div {
