--- a/Collab/style.css
+++ b/Collab/style.css
@@ -13,8 +13,7 @@ div {
 
     width: 250px;
     height: 250px;
-    border: 2px solid #000;;
-    
+    border: 2px solid #000;    
 }
 
 
@@ -24,10 +23,8 @@ h2 {
     font-weight: bold;
 }
 
-div {
-
+.div-costumer {
     width: 250px;
     height: 250px;
-    border: 1px solid red;
-    
+    border: 1px solid red;    
 }
