--- a/Collab/style.css
+++ b/Collab/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 h1 {
     color: white;
@@ -15,8 +15,6 @@ div {
     height: 250px;
     border: 2px solid #000;    
 }
-
-
 
 h2 {
     color: red;
